--- a/newDesktop/app/index.html
+++ b/newDesktop/app/index.html
@@ -8,16 +8,13 @@
     }
   </style>
   <script>
-   
+    function bodyOnLoad(){
+      require('./server.js');
+      window.location.assign('http://localhost:3000/');
+    }
   </script>
 </head>
-<body >
-
-<form action="/showSheetUploadForm" enctype="multipart/form-data" method="post">
-  <div>	    <input type="radio" name="format" value="xlsx">xlsx<br>
-        <input type="radio" name="format" value="csv">csv<br>
-		<input type="file" name="upload" multiple="multiple"><br>
-		<input type="submit" value="Upload">
-	   </div> </form>
+<body onload="bodyOnLoad()">
+<div class="loading"></div>
 </body>
 </html>
